<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_news_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xingyugu.news.NewsDetailActivity">
    
    <WebView
        android:id="@+id/activity_news_details_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></WebView>

    <ProgressBar
        android:id="@+id/activity_news_details_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_alignParentTop="true"/>


</RelativeLayout>
